fix horizontal scroll bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,6 @@
 .page {
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
-}
-
-.page--landing {
-  height: 100vh;
-  position: relative;
-  background-image: url("./images/landing-background-c.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top;
 }
 
 .page--home {
@@ -34,11 +25,9 @@
 @media (min-width: 1024px) {
   .page--merch {
     min-height: 100vh;
-
   }
   .page--home {
     min-height: 100vh;
-
   }
 
   .page--contact {
