--- a/src/Home.scss
+++ b/src/Home.scss
@@ -50,8 +50,7 @@
   .home__content {
     background-image: url("./images/test-a.jpg");
     background-position: right;
-    height: 100vh;
-    width: 100vw;
+    height: 92vh;
 
     .home__wrapper {
       display: flex;
